--- a/LoginPageProject/style.css
+++ b/LoginPageProject/style.css
@@ -6,7 +6,7 @@
      display: flex;
      flex-direction: column;
      width: 94vw;
-     height: 88vh;
+     height: 100vh;
      background-image: url(./loginWallpaper.jpg);
      background-size: cover;
      background-repeat: no-repeat;
@@ -60,4 +60,21 @@
      text-align: center;
      font-size: 17px;
      color: blanchedalmond;
+ }
+
+ #second {
+     display: flex;
+     flex-direction: column;
+     width: 94vw;
+     height: 88vh;
+     background-size: cover;
+     background-repeat: no-repeat;
+     margin: auto;
+     margin-top: 3%;
+     display: flex;
+     flex-direction: column;
+     color: antiquewhite;
+     align-items: center;
+     margin: auto;
+     border-radius: 55px;
  }
